Closed Bug 972620 Opened 11 years ago Closed 11 years ago

WebGL glHint doesn't MakeCurrent

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30
Tracking Status
firefox27 --- wontfix
firefox28 --- wontfix
firefox29 --- fixed
firefox30 --- fixed
firefox-esr24 --- wontfix
b2g18 --- wontfix
b2g-v1.1hd --- wontfix
b2g-v1.2 --- wontfix
b2g-v1.3 --- wontfix
b2g-v1.3T --- wontfix
b2g-v1.4 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

WebGL.hint doesn't call makecurrent. It...should.
Attached patch makecur-hintSplinter Review
Attachment #8375872 - Flags: review?(dglastonbury)
Attachment #8375872 - Flags: review?(dglastonbury) → review+
Comment on attachment 8375872 [details] [diff] [review] makecur-hint [Approval Request Comment] Bug caused by (feature/regressing bug #): WebGL User impact if declined: Nothing dangerous. Testing completed (on m-c, etc.): Local Risk to taking this patch (and alternatives if risky): none String or IDL/UUID changes made by this patch: none
Attachment #8375872 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Attachment #8375872 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: