Bug 972620 - MakeCurrent during WebGL.hint(). r=kamidphish, a=sledru